update search indexing flow